--- a/template/base.htm
+++ b/template/base.htm
@@ -42,9 +42,9 @@
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <ul class="menu" style="font-size:1.1rem;">
-          <li><a href="/owner/home-owner" class="link link-theme link-arrow">Home</a></li>
-          <li><a href="/owner/alldata" class="link link-theme link-arrow">Contact Us</a></li>
-          <li><a href="/owner/con-data" class="link link-theme link-arrow">Gallery</a></li>
+          <li><a href="" class="link link-theme link-arrow">Home</a></li>
+          <li><a href="https://wa.me/+919289099216" class="link link-theme link-arrow">Contact Us</a></li>
+          <li><a href="/gallery" class="link link-theme link-arrow">Gallery</a></li>
 
       </ul>
 
